Fix: mobile layout issues

--- a/templates/assets/scss/base/_header.scss
+++ b/templates/assets/scss/base/_header.scss
@@ -28,6 +28,9 @@
 
     li {
       margin-right: $spacer2;
+      @media screen and (max-width: $small-screen) {
+        margin-right: $spacer;
+      }
 
       a {
         color: $type-dark;
